add controllers and DAO to be able to get the resturants data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
       "cSpell.words": [
             "RESTREVU",
-            "wtimeout"
+            "wtimeout",
+            "zipcode"
       ]
 }
